new logo and controllable profile picture scale

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -6,8 +6,8 @@
     </a>
     
     <a class="logo" href="#" (click)="navigateHome()">
-      <img src="assets/brand/logo-white.svg" alt="ccarbn">
-      <span>cCarbn</span>
+      <img src="assets/brand/logo-white.svg" alt="cCarbn">
+      <!-- <span>cCarbn</span> -->
     </a>
   </div>
 </div>
