--- a/src/app/dashboard/twitch/api/api.component.html
+++ b/src/app/dashboard/twitch/api/api.component.html
@@ -1,78 +1,161 @@
 <nb-layout>
     <nb-layout-column>
 
+        <nb-card class="global-card" status="primary">
+            <nb-card-header>
+                GLOBAL SETTINGS
+            </nb-card-header>
+            <nb-card-body>
+                <nb-accordion>
+                    <nb-accordion-item>
+                        <nb-accordion-item-header>
+                            VIEWPORT
+                        </nb-accordion-item-header>
+                        <nb-accordion-item-body>
+                            width<br>height
+                        </nb-accordion-item-body>
+                    </nb-accordion-item>
+                </nb-accordion>
+            </nb-card-body>
+        </nb-card>
+
         <nb-accordion>
             <nb-accordion-item *ngFor="let e of events">
                 <nb-accordion-item-header>
-                    <button nbButton status="primary" (click)="sendTestEvent($event, e.event)"><nb-icon icon="cast"></nb-icon></button>
+                    <button nbButton status="primary" (click)="sendTestEvent($event, e)"><nb-icon icon="cast"></nb-icon></button>
                     <div class="header-name">
-                        {{e.event.name}}
+                        {{e.name}}
                     </div>
                     <div class="header-conditions">
                         <div *ngFor="let c of e.conditions; let i = index" style="white-space: pre-line;">
-                            <strong>{{c.type}}</strong> {{c.operator}} {{c.compared}}
+                            <strong>{{ConditionTypes[c.type]}}</strong> {{AllOperators[c.operator]}} {{c.compared.title ? c.compared.title : _UserTypes.includes(c.compared+'') ?  UserTypes[c.compared] : c.compared}}
                             <strong *ngIf="i+1 < e.conditions.length">&nbsp;AND&nbsp;</strong>
                         </div>
                     </div>
                 </nb-accordion-item-header>
                 <nb-accordion-item-body>
-                    
-                    <nb-select placeholder="Select type of event" [(selected)]="e.event.type">
-                        <nb-option *ngFor="let type of eventTypes" [value]="type">{{type}}</nb-option>
-                    </nb-select>
+                    <nb-card>
+                        <nb-card-header class="conditions-header">                           
+                            <nb-list>
+                                <nb-list-item *ngFor="let c of e.conditions" class="condition-item">
 
-                    <button nbButton status="success" style="margin-left: 2rem;" [disabled]="!changes">SAVE</button>
+                                    <nb-select [(selected)]="c.type" (selectedChange)="e.changes=true">
+                                        <nb-option *ngFor="let type of ConditionTypes | keyvalue" [value]=type.key>{{type.value}}</nb-option>
+                                    </nb-select>
+                                
+                                    <nb-select *ngIf="c.type!=='user' && c.type!=='redeem'" [(selected)]="c.operator" class="operator-select" (selectedChange)="e.changes=true" size="small">
+                                        <nb-option *ngFor="let op of ComparisonOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                    </nb-select>
+                                    <nb-select *ngIf="c.type==='user'" [(selected)]="c.operator" class="operator-select" (selectedChange)="e.changes=true" size="small">
+                                        <nb-option *ngFor="let op of UserOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                        <nb-option *ngFor="let op of UserTypeOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                    </nb-select>
+                                    <nb-select *ngIf="c.type==='redeem'" [(selected)]="c.operator" class="operator-select" (selectedChange)="e.changes=true" size="small">
+                                        <nb-option *ngFor="let op of RedemptionOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                    </nb-select>
 
-                    <nb-tabset fullWidth>
-                        <nb-tab tabTitle="Conditions">
-                            <nb-card class="conditions-card">
-                                <nb-card-header class="conditions-header">
-                                    The conditions under which this events will trigger
-                                </nb-card-header>
-                                <nb-list>
-                                    <nb-list-item *ngFor="let c of e.conditions" class="condition-item">
-                                        <nb-select [(selected)]="c.type">
-                                            <nb-option *ngFor="let type of conditionTypes" [value]=type>{{type}}</nb-option>
-                                        </nb-select>
+                                    <input *ngIf="!c.operator.startsWith('type') && c.operator !== 'redeemed'" nbInput [type]="c.type==='user' ? 'text' : 'number'" [(ngModel)]="c.compared" (change)="e.changes=true">
+                                    <nb-select *ngIf="c.operator.startsWith('type')" [(selected)]="c.compared" (selectedChange)="e.changes=true">
+                                        <nb-option *ngFor="let ut of UserTypes | keyvalue" [value]=ut.key>{{ut.value}}</nb-option>
+                                    </nb-select>
+                                    <nb-select *ngIf="c.operator === 'redeemed'" [(selected)]="c.compared" (selectedChange)="e.changes=true">
+                                        <nb-option *ngFor="let r of redemptions" [value]=r>{{r.title}}</nb-option>
+                                    </nb-select>
 
-                                        <nb-select *ngIf="c.type!=='User'" [(selected)]="c.operator" class="operator-select">
-                                            <nb-option *ngFor="let op of comparisonOperators" [value]=op>{{op}}</nb-option>
-                                        </nb-select>
-                                        <nb-select *ngIf="c.type==='User'" [(selected)]="c.operator" class="operator-select">
-                                            <nb-option *ngFor="let op of userOperators;" [value]=op>{{op}}</nb-option>
-                                        </nb-select>
+                                    <button nbButton status="danger" [disabled]="e.conditions.length<2" (click)="deleteCondition(e, c)"><nb-icon icon="trash-2"></nb-icon></button>
+                                </nb-list-item>
+                        
+                                <nb-list-item>
+                                    <button nbButton status="primary" (click)="addCondition(e)">ADD CONDITION</button>
+                                </nb-list-item>
+                            </nb-list>
+                        </nb-card-header>
 
-                                        <input *ngIf="!c.operator.startsWith('type')" nbInput [type]="c.type==='User' ? 'text' : 'number'" [value]="c.compared" style="width:100px">
-                                        <nb-select *ngIf="c.operator.startsWith('type')" [(selected)]="c.compared">
-                                            <nb-option *ngFor="let ut of userTypes;" [value]=ut>{{ut}}</nb-option>
-                                        </nb-select>
+                        <nb-card-body class="events-body">
+                            <nb-tabset fullWidth>
+                                <nb-tab *ngFor="let ee of e.events" [tabTitle]="ee.type">
 
-                                        <button nbButton status="danger" [disabled]="e.conditions.length<2" (click)="deleteCondition(e, c)"><nb-icon icon="trash-2"></nb-icon></button>
-                                    </nb-list-item>
-                               
-                                    <nb-list-item>
-                                        <button nbButton status="primary" (click)="addCondition(e)">ADD CONDITION</button>
-                                    </nb-list-item>
-                                </nb-list>
-                            </nb-card>
-                            
-                        </nb-tab>
-                        <nb-tab tabTitle="General">
-                            name
-                            upload file
-                        </nb-tab>
-                        <nb-tab tabTitle="Settings">
-                            width
-                            height
-                            margin
-                            delayStart
-                            delayEnd
-                        </nb-tab>
-                    </nb-tabset>
+                                    <div #video *ngIf="ee.type==='video'" class="video-container">
+                                        
+                                        <div *ngIf="ee.src" class="video-preview">
+                                            <video style="width: 100%; height: 100%;" (loadeddata)="onLoadedData(ee, $event)" autoplay loop [muted]="'muted'">
+                                                <source [src]="ee.src">
+                                            </video>  
+                                            <button nbButton class="video-delete" status="danger" (click)="deleteVideoSrc(e, ee, ee.src)"><nb-icon icon="trash-2"></nb-icon></button>
+                                        </div>
+                                        <div *ngIf="!ee.src" class="video-uploader">
+                                            <nb-select placeholder="Select a video" *ngIf="ee.select" [(selected)]="ee.src" (selectedChange)="videoSelected(e, ee);e.changes=true">
+                                                <nb-option *ngFor="let file of userVideos" [value]=file.src>{{file.filename}}</nb-option>
+                                            </nb-select>
+                                            <app-uploader *ngIf="ee.upload" width="240px" height="120px" [autoIndexing]="true" [uploaded]="uploadedSubject" [reference]="{e: e, ee: ee}"></app-uploader>
+                                            <button nbButton class="file-select" status="success" nbTooltip="Select file from existing" nbTooltipStatus="success" (click)="getUserSelectableVideos(ee)"><nb-icon icon="book-open"></nb-icon></button>
+                                            <button nbButton  class="file-upload" status="warning" nbTooltip="Upload a new file" nbTooltipStatus="warning" (click)="ee.upload=true; ee.select = false"><nb-icon icon="cloud-upload"></nb-icon></button>
+                                        </div>
+                                        <div *ngIf="ee.src && ee.videoInformation" class="video-details">
+                                            <div>Width: {{ee.videoInformation.width}}px</div>
+                                            <div>Height: {{ee.videoInformation.height}}px</div>
+                                            <div>Duration: {{ee.videoInformation.duration}}s</div>
+                                        </div>
 
+                                        <div class="video-settings">
+                                            <nb-list>
+                                                <nb-list-item *ngFor="let s of _videoSettings | keyvalue">
+                                                    <div class="key">{{s.key}}</div>
+                                                    <div class="value" *ngIf="s.value==='number'">
+                                                        <input nbInput type="number" [(ngModel)]="ee[s.key]" fullWidth>
+                                                        <div class="unit">px</div>
+                                                    </div>
+                                                    <div class="value" *ngIf="s.value === 'POSITION'">
+                                                        <nb-select [(selected)]="ee.position">
+                                                            <nb-option *ngFor="let p of _POSITION" [value]="p">{{p}}</nb-option>
+                                                        </nb-select>
+                                                    </div>
+                                                </nb-list-item>
+                                            </nb-list>
+                                        </div>
+
+                                    </div>
+
+                                    <div #message *ngIf="ee.type==='message'" class="message-container">
+                                        message
+                                    </div>
+
+                                    <div #gif *ngIf="ee.type==='gif'" class="gif-container">
+                                        gif
+                                    </div>
+
+                                </nb-tab>
+                                <nb-tab tabIcon="file-add">
+                                    <nb-select placeholder="Select type of event" fullWidth [(selected)]="_singleSelection" (selectedChange)="addEvent(e, $event)">
+                                        <nb-option *ngFor="let type of EventTypes | keyvalue" [value]="type.key">{{type.value}}</nb-option>
+                                    </nb-select>
+                                </nb-tab>
+                                <nb-tab tabIcon="trash-2" [disabled]="!e.events || e.events.length<1">
+                                    <nb-select placeholder="Select event to delete" fullWidth [(selected)]="_singleSelection" (selectedChange)="deleteEvent(e, $event)">
+                                        <nb-option *ngFor="let ee of e.events; let i = index" [value]="i">{{ee.type}}</nb-option>
+                                    </nb-select>
+                                </nb-tab>
+                            </nb-tabset>
+                        </nb-card-body>
+
+                        <nb-card-footer *ngIf="e.error" class="event-error">
+                            There were errors in your event's settings... Could not save it!
+                        </nb-card-footer>
+                        <nb-card-footer class="event-footer">
+                            <button nbButton status="warning" [disabled]="!e.changes" (click)="revert(e)"><nb-icon icon="refresh"></nb-icon></button>
+                            <button nbButton status="success" [disabled]="!e.changes" (click)="save(e)">SAVE</button>
+                            <button nbButton status="danger" (click)="deleteE(e)"><nb-icon icon="trash-2"></nb-icon></button>
+                        </nb-card-footer>
+                    </nb-card>
                 </nb-accordion-item-body>
             </nb-accordion-item>
         </nb-accordion>
+
+        <nb-card class="add-event-card">
+            <nb-card-body>
+                <button nbButton status="success" fullWidth (click)="addNewEvent()">ADD NEW EVENT</button>
+            </nb-card-body>
+        </nb-card>
 
     </nb-layout-column>
 </nb-layout>
