Completed rewards events

--- a/src/app/dashboard/twitch/api/api.component.html
+++ b/src/app/dashboard/twitch/api/api.component.html
@@ -67,6 +67,7 @@
                         
                                 <nb-list-item>
                                     <button nbButton status="primary" (click)="addCondition(e)">ADD CONDITION</button>
+                                    <input nbInput [(ngModel)]="e.name" fullWidth style="margin-left:1rem">
                                 </nb-list-item>
                             </nb-list>
                         </nb-card-header>
