--- a/src/app/dashboard/twitch/api/api.component.html
+++ b/src/app/dashboard/twitch/api/api.component.html
@@ -76,7 +76,7 @@
                             <nb-tabset fullWidth>
                                 <nb-tab *ngFor="let ee of e.events" [tabTitle]="ee.type">
 
-                                    <div #video *ngIf="ee.type==='video'" class="video-container">
+                                    <div #video *ngIf="ee.type==='video' || ee.type==='audio'" class="video-container">
                                         
                                         <div *ngIf="ee.src" class="video-preview">
                                             <video style="width: 100%; height: 100%;" (loadeddata)="onLoadedData(ee, $event)" autoplay loop [muted]="'muted'">
@@ -89,18 +89,32 @@
                                                 <nb-option *ngFor="let file of userVideos" [value]=file.src>{{file.filename}}</nb-option>
                                             </nb-select>
                                             <app-uploader *ngIf="ee.upload" width="240px" height="120px" [autoIndexing]="true" [uploaded]="uploadedSubject" [reference]="{e: e, ee: ee}"></app-uploader>
-                                            <button nbButton class="file-select" status="success" nbTooltip="Select file from existing" nbTooltipStatus="success" (click)="getUserSelectableVideos(ee)"><nb-icon icon="book-open"></nb-icon></button>
+                                            <button nbButton class="file-select" status="success" nbTooltip="Select file from existing" nbTooltipStatus="success" (click)="getUserSelectableFiles(ee)"><nb-icon icon="book-open"></nb-icon></button>
                                             <button nbButton  class="file-upload" status="warning" nbTooltip="Upload a new file" nbTooltipStatus="warning" (click)="ee.upload=true; ee.select = false"><nb-icon icon="cloud-upload"></nb-icon></button>
                                         </div>
                                         <div *ngIf="ee.src && ee.videoInformation" class="video-details">
-                                            <div>Width: {{ee.videoInformation.width}}px</div>
-                                            <div>Height: {{ee.videoInformation.height}}px</div>
+                                            <div *ngIf="ee.type==='video'">Width: {{ee.videoInformation.width}}px</div>
+                                            <div *ngIf="ee.type==='video'">Height: {{ee.videoInformation.height}}px</div>
                                             <div>Duration: {{ee.videoInformation.duration}}s</div>
                                         </div>
 
                                         <div class="video-settings">
-                                            <nb-list>
+                                            <nb-list *ngIf="ee.type==='video'">
                                                 <nb-list-item *ngFor="let s of _videoSettings | keyvalue">
+                                                    <div class="key">{{s.key}}</div>
+                                                    <div class="value" *ngIf="s.value==='number'">
+                                                        <input nbInput type="number" [(ngModel)]="ee[s.key]" fullWidth>
+                                                        <div class="unit">px</div>
+                                                    </div>
+                                                    <div class="value" *ngIf="s.value === 'POSITION'">
+                                                        <nb-select [(selected)]="ee.position">
+                                                            <nb-option *ngFor="let p of _POSITION" [value]="p">{{p}}</nb-option>
+                                                        </nb-select>
+                                                    </div>
+                                                </nb-list-item>
+                                            </nb-list>
+                                            <nb-list *ngIf="ee.type==='audio'">
+                                                <nb-list-item *ngFor="let s of _audioSettings | keyvalue">
                                                     <div class="key">{{s.key}}</div>
                                                     <div class="value" *ngIf="s.value==='number'">
                                                         <input nbInput type="number" [(ngModel)]="ee[s.key]" fullWidth>
@@ -117,6 +131,7 @@
 
                                     </div>
 
+                                
                                     <div #message *ngIf="ee.type==='message'" class="message-container">
                                         message
                                     </div>
