added tts functionality

--- a/src/app/websource/events/events.component.html
+++ b/src/app/websource/events/events.component.html
@@ -2,6 +2,7 @@
   
   <app-video *ngIf="currentEvent?.type === 'video'" [video]=currentEvent [viewport]="viewport"></app-video>
   <app-audio *ngIf="currentEvent?.type === 'audio'" [audio]=currentEvent></app-audio>
+  <app-tts *ngIf="currentEvent?.type === 'tts'" [tts]=currentEvent></app-tts>
   
   <div class="viewport-anchor" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}"></div>
   <div id="cover" [ngStyle]="{
